deployments/local/compute.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: compute
  name: compute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compute
  template:
    metadata:
      labels:
        app: compute
    spec:
      containers:
      - image: compute
        name: compute
