deployments/local/envoy-conf.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: compute
              domains: ["*"]
              routes:
              - match: { prefix: "/cloud.compute" }
                route: { cluster: compute }
              - match: { prefix: "/cloud.iam" }
                route: { cluster: iam }
              - match: { prefix: "/cloud.rdb" }
                route: { cluster: rdb }
              - match: { prefix: "/cloud.resourcemanager" }
                route: { cluster: resourcemanager }
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              grpc_service:
                envoy_grpc:
                  cluster_name: authorizer
                timeout: 0.5s
          - name: envoy.router
  clusters:
  - name: compute
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: compute
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: compute
                port_value: 9000
  - name: iam
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: iam
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: iam
                port_value: 9001
  - name: rdb
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: rdb
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: rdb
                port_value: 9002
  - name: resourcemanager
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: resourcemanager
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: resourcemanager
                port_value: 9003
  - name: authorizer
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: authorizer
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: authorizer
                port_value: 9004
