deployments/local/rdb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rdb
  name: rdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdb
  template:
    metadata:
      labels:
        app: rdb
    spec:
      containers:
      - image: rdb
        name: rdb
        env:
        - name: LOGGER_DEBUG
          value: "1"
        - name: GRPC_SERVER_PORT
          value: "9002"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rdb
  name: rdb
spec:
  ports:
  - name: http2
    port: 9002
    protocol: TCP
  selector:
    app: rdb
  type: ClusterIP
