deployments/local/resourcemanager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resourcemanager
  name: resourcemanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resourcemanager
  template:
    metadata:
      labels:
        app: resourcemanager
    spec:
      containers:
      - image: resourcemanager
        name: resourcemanager
        env:
        - name: LOGGER_DEBUG
          value: "1"
        - name: GRPC_SERVER_PORT
          value: "9003"
        - name: MYSQL_USER
          value: root
        - name: MYSQL_PASSWORD
          value: root
        - name: MYSQL_HOST
          value: mysql
        - name: MYSQL_PORT
          value: "3306"
        - name: MYSQL_DATABASE
          value: cloud
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resourcemanager
  name: resourcemanager
spec:
  ports:
  - name: http2
    port: 9003
    protocol: TCP
  selector:
    app: resourcemanager
  type: ClusterIP
